--- a/package.json
+++ b/package.json
@@ -2,6 +2,6 @@
     "devDependencies": {
         "mouse-helper": "^1.0.7",
         "playwright": "^1.37.0",
-        "sharp": "^0.32.5"
+        "sharp": ">=0.32.6"
     }
 }
